# ftl-automation

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: README.md  advanced_usage.py  backup_restore.py  basic_usage.py  builtin_tools_demo.py  cli_examples.py  direct_tool_calls.py  firewall_security.py  improved_syntax_demo.py  inventory_example.py  linode_fedora_deployment.py  linode_style_test.py  server_provisioning.py  server_setup.py  system_setup.py  tool_loading.py  web_application_deployment.py
ftl_automation/: __init__.py  builtin_tools.py  cli.py  context.py  core.py  exceptions.py  tool_base.py  tools.py
tests/: test_loading_tools.py
